# VanguardEngine

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CreateMakefile.sh  CreateProjectFiles_Linux.sh  CreateVSProjectFiles.bat  CreateXCodeProjectFiles.sh  Jobs.json  Links.txt  Linux_CreateCodeBlocksProjectFiles.sh  Linux_CreateMakefile.sh  OSX_CreateXCodeProjectFiles.sh  README.md  Vanguard.sln  VanguardFunctions.cmake  Vanguard_Managed.sln  Windows_CreateVSProjectFiles.bat
Engine/Source/: CMakeLists.txt
Engine/Source/Core/: AsyncIO.cpp  AsyncIO.h  CMakeLists.txt  Core.cpp  Core.h  Core_Common.h  Directories.cpp  Directories.h  Events.cpp  Events.h  ISubsystem.h  Log.cpp  Log.h  ModuleManager.cpp  ModuleManager.h  Profiler.cpp  Profiler.h  Project.cpp  Project.h  ResourceManager.cpp  ResourceManager.h  Type.cpp  Type.h  World.cpp  World.h
Engine/Source/Core/Application/: Application.cpp  Application.h  LinuxApplication.cpp.h  OSXApplication.cpp.h  WindowsApplication.cpp.h
Engine/Source/Core/Config/: Config.h  ConfigFile.cpp  ConfigFile.h  ConfigTable.cpp  ConfigTable.h  ConfigVar.h
Engine/Source/Core/Entity/: Actor.cpp  Actor.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h  VanguardObject.h
Engine/Source/Core/EntityComponent/: Entity.cpp  VanguardObject.h  World.cpp  World.h
Engine/Source/Core/Jobs/: Frame.cpp  Frame.h  Job.cpp  Job.h  JobManager.cpp  JobManager.h  JobProfiler.cpp  JobProfiler.h  JobWorker.cpp  JobWorker.h
Engine/Source/Core/Modules/: GameModule.cpp  GameModule.h  IModule.h  ModuleDeclaration.h  ModuleInfo.cpp  ModuleInfo.h  ModuleManager.cpp  ModuleManager.h
Engine/Source/Core/Mono/: ManagedClass.cpp  ManagedModule.h  ManagedString.cpp  ManagedString.h
Engine/Source/Core/NativeReflection/: NativeClassInfo.cpp  NativeClassInfo.h  NativeReflection.h
Engine/Source/Core/Renderer/: Camera.cpp  Camera.h  IRenderer.h  RenderView.cpp  RenderView.h
Engine/Source/Core/WorldObjects/: Component.cpp  Component.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h  VanguardObject.cpp  WorldObject.cpp  WorldObject.h
Engine/Source/Foundation/: CMakeLists.txt  Foundation.h  Foundation_Common.h  SystemInfo.cpp  SystemInfo.h
Engine/Source/Foundation/Collections/: CircularBuffer.h  Collections.h  Dictionary.h  DynamicArray.h  Hashtable.h  ICollection.h  Queue.cpp  Queue.h
Engine/Source/Foundation/Interfaces/: ICore.h  IModule.h
Engine/Source/Foundation/Types/: Alignment.h  Box.cpp  Box.h  Color.cpp  Color.h  DynamicLibrary.cpp  DynamicLibrary.h  EulerAngles.cpp  EulerAngles.h  FilePath.cpp  FilePath.h  IntegerDefs.h  Matrix4x4.cpp  Matrix4x4.h  Mutex.cpp  Mutex.h  Quaternion.cpp  Quaternion.h  Rect.h  StringID.h  Thread.cpp  Thread.h  UUID.cpp  UUID.h  VanguardString.cpp  VanguardString.h  VanguardTime.cpp  VanguardTime.h  VanguardTypes.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Engine/Source/Foundation/Utility/: Crc32.cpp  Crc32.h  FileSystem.cpp  FileSystem.h  MathFunctions.cpp  MathFunctions.h  Utility.cpp  Utility.h
Engine/Source/Managed/: VanguardManaged.sln
Engine/Source/Managed/ManagedCore/: Log.cs  ManagedCore.csproj
Engine/Source/Managed/ManagedModule/: ManagedModule.cs  ManagedModule.csproj
Engine/Source/ManagedCore/: ManagedCore.csproj
Engine/Source/ManagedCore/Modules/: IModule.cs  ModuleManager.cs
Engine/Source/Native/Core/: Core.cpp  Core.h  Directories.cpp  Directories.h  Log.cpp  Log.h  Project.cpp
Engine/Source/Native/Foundation/: CMakeLists.txt  Foundation.h  Foundation_Common.h  SystemInfo.cpp  SystemInfo.h
Engine/Source/ProjectLauncher/: ProjectLauncher.cpp
Engine/Source/UnitTests/: CMakeLists.txt  Main.cpp
Source/: CMakeLists.txt
Source/Engine/Core/: CMakeLists.txt  Core.cpp  Core.h  CoreMacros.h  Core_Common.h  Log.cpp  Log.h
Source/Engine/Core/Application/: Application.cpp  Application.h  WindowsApplication.cpp.h
Source/Engine/Core/Config/: Config.h  ConfigTable.cpp  ConfigTable.h  ConfigVar.h
Source/Engine/Core/EntityComponent/: Component.cpp  Component.h  Entity.cpp  Entity.h  EntityComponentSystem.h  Transform.cpp  Transform.h  VanguardObject.cpp  VanguardObject.h  World.h
Source/Engine/Core/Interfaces/: IModule.h
Source/Engine/Core/Jobs/: Frame.cpp  Frame.h  Job.h  JobEnums.h  JobManager.cpp  JobManager.h  JobThread.cpp  JobThread.h
Source/Engine/Core/ModuleManager/: ModuleDeclaration.h  ModuleInfo.h  ModuleLib.cpp  ModuleLib.h  ModuleManager.cpp  ModuleManager.h
Source/Engine/Core/Mono/: Mono.cpp  (+9 more)
Source/Engine/Foundation/: Application.h  CMakeLists.txt  Foundation.cpp  Foundation.h  List.h  Log.h  SystemInfo.h  Typedefs.h  VanguardMath.h
Source/Engine/Types/: CMakeLists.txt
Source/Executables/Editor/: CMakeLists.txt  Main.cpp
Source/Executables/EditorLauncher/: CMakeLists.txt  Main.cpp
Source/Executables/Game/: CMakeLists.txt  Main.cpp  TestComponentType.cpp  TestComponentType.h  WinMain.cpp
Source/Executables/UnitTests/: CMakeLists.txt  Main.cpp
Source/Managed/: VanguardManaged.sln
Source/Managed/ManagedCore/: ManagedCore.cs  ManagedCore.csproj
Source/Managed/ManagedModule/: ManagedModule.csproj
Source/ModuleImplementations/PhysX/: CmakeLists.txt
Source/ModuleInterfaces/Physics/: CMakeLists.txt
Source/Modules/Editor/: CmakeLists.txt  Editor.cpp  Editor.h  EditorMainWindow.cpp  EditorMainWindow.h  EditorUI.cpp
Source/Modules/EditorUI/: CMakeLists.txt  CmakeLists.txt  EditorUI.h  EditorUI_Common.h
Source/Modules/Editor_UI/: CmakeLists.txt  EditorApplication.h  Editor_UI.cpp  Editor_UI.h  Editor_UI_Common.h
Source/Modules/Juce_EditorUIRenderer/: CMakeLists.txt  Juce_EditorUIRenderer.cpp  Juce_EditorUIRenderer.h  Juce_EditorUIRenderer_Common.h
Source/Modules/PhysX/: CMakeLists.txt  CmakeLists.txt  PhysX.cpp  PhysX.h
Source/Modules/Physics_PhysX/: CmakeLists.txt  PhysX.h  PhysXRigidBody.cpp  PhysXRigidBody.h
Source/Modules/Qt_EditorUI/: CMakeLists.txt  Qt_EditorUI.cpp  Qt_EditorUI.h  Qt_EditorUI_Common.h
Source/Native/Core/: Core.h
Source/Native/Foundation/: CMakeLists.txt  Foundation.h
(+392 files in other folders)
